# research

./: .gitignore  LICENSE  README.md  pyproject.toml
data/duckdb/: test.db
research/: hello.py  pyproject.toml
research/llms/: gemini.py  semantic_search_od.py
research/llms/gemini/: rag_utils.py
research/llms/huggingface/: nlp_02_using_transformers.py  nlp_03_fine_tuning.py  nlp_06_tokenizers.py
research/llms/open-discourse/: finetune_model.py
src/: kalman.py
src/research/llms/: openai_voice_example.py  test_audio.py  test_langfuse.py
src/research/llms/gemini/: instructor_langfuse.py  quickstart.py
src/research/llms/huggingface/: huggingface.py  smolagents_01_tour.py  smolagents_02_good_agents.py
src/research/llms/open-discourse/: finetune_model.py  generate_labels.py  preprocess_data.py  test_model.py
src/research/llms/utils/: llm_logging.py
src/research/papers/simple_dnn/: README.md  config.py  modal_train.py  model.py  train.py
src/research/stats/: logistic_regression.py
src/research/torch/: mnist.py
