[tool.poetry]
name = "quant-research"
version = "0.1.0"
description = ""
authors = ["David Hinrichs <dvd.hnrchs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"},]

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.31"
matplotlib = "^3.9.2"
polars = "^1.5.0"
ipykernel = "^6.29.5"
duckdb = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
