[project]
name = "research"
version = "0.99"
description = "A collection of research projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.2.0",
    "e2b-code-interpreter>=1.2.0",
    "evaluate>=0.4.3",
    "google-cloud-aiplatform>=1.76.0",
    "instructor[vertexai]>=1.7.2",
    "jax>=0.4.38",
    "jupyter>=1.1.1",
    "langfuse>=2.58.0",
    "litellm>=1.59.8",
    "modal>=0.73.78",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "semantic-text-splitter>=0.24.1",
    "sentence-transformers>=3.3.1",
    "sentencepiece>=0.2.0",
    "smolagents[gradio,litellm]>=1.13.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.0",
]
[project.scripts]
research = "research:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
