[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.76.0",
    "jax>=0.4.38",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
