[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "google-cloud-aiplatform>=1.76.0",
    "instructor[vertexai]>=1.7.2",
    "jax>=0.4.38",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
